--- a/css/styles.css
+++ b/css/styles.css
@@ -290,10 +290,13 @@ margin-right: 10px}
 
 .activity-sublist:not(:last-child) {
   margin-right: 30px;
+  
 }
 
 .activity-sublist{position: relative;
+  z-index: -1;
 ;}
+
 .section.activity {
   padding-bottom: 94px;
 }
@@ -596,6 +599,7 @@ background-color: var(--dark-background);
 resize: none;
 padding: 15px;
 margin-right: 12px;
+color: var(--white-color);
 }
 
 
@@ -741,7 +745,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(0);
 }
 
-.name-thumb{
+.name-thumb-portfolio{
   margin: 0;
   padding: 63px 24px;
 }
